# Crane

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  pyenvdialog.cpp  pyenvdialog.h  pyenvdialog.ui  utils.hpp
algorithm/: CMakeLists.txt
res/locals/: Scarab_zh_CN.ts
res/ui/: mainwindow.ui  pyenvdialog.ui  qtlaboratory.ui
scripts/: global_format.py
src/: CMakeLists.txt  craneglobal.h  main.cpp  mainwindow.cpp  mainwindow.h  scarabglobal.h  utils.hpp
src/algorithm/: CMakeLists.txt
src/algorithm/geometry/: geometry.h  geometry_algo.cpp  geometry_algo.h  geometry_algo.hpp  geometry_algo_arc.cpp  geometry_algo_arc.h  geometry_algo_convertor.cpp  geometry_algo_convertor.h  geometry_algo_core.h  geometry_algo_line.cpp  geometry_algo_line.h  geometry_algo_math.cpp  geometry_algo_math.h  geometry_algo_point.cpp  geometry_algo_point.h  geometry_algo_polygon.cpp  geometry_algo_polygon.h  polygon.cpp  polygon.h  polygon_offset.hpp  temp
src/cranegpt/: cranegptdialog.cpp  cranegptdialog.h  messagehandler.cpp  messagehandler.h
src/generic/: geometry_algo.hpp
src/pycheck/: pyenvdialog.cpp  pyenvdialog.h
src/qtlaboratory/: arrow.cpp  diagramitem.cpp  diagramitem.h  geometryitem.cpp  geometryitem.h  laboratorydialog.cpp  laboratorydialog.h  labscene.cpp  labscene.h  labview.cpp  labview.h  profilemodel.cpp  qtlaboratory.cpp  qtlaboratory.h  shape.cpp  shape.h  shapehelper.h
src/utils/: convertor_utils.h  utils.hpp  visual_utils.h
test/: CMakeLists.txt
test/algorithm/geometry/: test_geometry_algo_core.cpp
test/test_geometry/: CMakeLists.txt  geometry_algo.cpp  geometry_algo.h  polygon.cpp  polygon.h  test_geometry.cpp
